# economy-classifier

./: .gitignore  AGENTS.md  README.md  REFERENCES.md  REQUIREMENTS.md  pyproject.toml  recomendacoes_orientadora.txt
docs/: arquitetura.md  bracis_stil_abstract.md  estimativa_recursos_computacionais.md  guia_colab.md  guia_execucao.md  meta_classificador_s2.md
notebooks/: 01_preparacao_dados.ipynb  02_tfidf_logreg.ipynb  03_tfidf_linearsvc.ipynb  04_tfidf_multinomialnb.ipynb  05_bert_colab.ipynb  06_heuristica.ipynb  07_ensemble.ipynb  08_classificar_novos_textos.ipynb  09_revisao_sabia4.ipynb  10_sabia4_avaliacao_test.ipynb  11_multiclasse.ipynb  11_tfidf_logreg.ipynb  12_tfidf_linearsvc.ipynb  13_llm_hf_colab.ipynb  13_tfidf_multinomialnb.ipynb  21_bert.ipynb  31_llm_hf.ipynb  41_eda_resultados.ipynb  43_ensemble.ipynb  44_analise_qualitativa_erros.ipynb  91_smoke_multiclasse_tfidf.ipynb
scripts/: colab_pack.py  colab_unpack.py  colab_unpack_streaming.py  export_ensemble.py  predict.py
src/economy_classifier/: __init__.py  bert.py  datasets.py  ensemble.py  error_analysis.py  evaluation.py  heuristics.py  hyperparameter_search.py  llm_review.py  predict.py  project.py  tfidf.py  visualization.py
tests/: conftest.py  test_bert.py  test_colab_unpack_streaming.py  test_datasets.py  test_ensemble.py  test_error_analysis.py  test_evaluation.py  test_heuristics.py  test_hyperparameter_search.py  test_integration.py  test_llm_review.py  test_predict.py  test_project.py  test_tfidf.py  test_visualization.py
