[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "economy-classifier"
version = "0.1.0"
description = "Reproducible pipeline for economy-related text classification (mercado vs outros)."
requires-python = ">=3.11"
# Lower bounds chosen to align with Google Colab's preinstalled stack so that
# `pip install -e .` does not trigger churn-prone upgrades of numpy/scipy/torch
# in a live runtime. uv.lock retains the higher versions for local dev.
dependencies = [
    "accelerate>=0.34",
    "datasets>=2.20",
    "matplotlib>=3.7",
    "numpy>=1.26",
    "openai>=1.50",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "seaborn>=0.13",
    "torch>=2.4",
    "transformers>=4.45",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]
llm = [
    "openai>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests with synthetic data (deselect with '-m not integration')",
    "slow: tests that take more than a few seconds (deselect with '-m not slow')",
]

[tool.ruff]
extend-exclude = ["notebooks/legacy"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]

[tool.setuptools.packages.find]
where = ["src"]
